examples/test/testpolicy1150.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1150
  namespace: namespace41
spec:
  podSelector:
    matchLabels:
      key45: value0
      key3: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value16
          key0: value14
          key12: value36
      podSelector:
        matchLabels:
          key26: value41
